@@ -988,11 +988,28 @@
 		lv2:default 180.0 ;
 		lv2:minimum 3.6 ;
 		lv2:maximum 360.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 115 ;
+		lv2:symbol "DEL1_BPMSYNC" ;
+		lv2:name "Delay BPM (sync)" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 116 ;
+		lv2:symbol "DEL1_BPMHOST" ;
+		lv2:name "Delay BPM (host)" ;
+		lv2:default 180.0 ;
+		lv2:minimum 3.6 ;
+		lv2:maximum 360.0 ;
 		lv2:designation lv2time:beatsPerMinute ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 115 ;
+		lv2:index 117 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -1001,7 +1018,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 116 ;
+		lv2:index 118 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
